abstract sizing more

--- a/scss/adhoc/_all.scss
+++ b/scss/adhoc/_all.scss
@@ -1,11 +1,7 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* ADHOC */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-$fullwidth: 980px;
-$lillwidth: 480px;
-$unit: $fullwidth / 97;
-$wt: $unit * 15;
-$ht: $unit * 15;
+$fullsize: 980px;
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_base";
