--- a/scss/adhoc/_all.scss
+++ b/scss/adhoc/_all.scss
@@ -3,6 +3,13 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 $fullsize: 980px;
 
+.dev *:hover {
+    outline-color: rgba(255,0,0,0.5);
+    outline-offset: -1px;
+    outline-style: solid;
+    outline-width: 1px;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_base";
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
