--- a/scss/adhoc/_base.scss
+++ b/scss/adhoc/_base.scss
@@ -2,12 +2,6 @@
 /* ADHOC / Base */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-.dev *:hover {
-    outline-color: rgba(255,0,0,0.5);
-    outline-offset: -1px;
-    outline-style: solid;
-    outline-width: 1px;
-}
 .iS-port {
     $count: 3;
     $height: $fullsize / 3.8;
@@ -25,7 +19,7 @@
     .iS-view {
         height: $height + $block;
         position: relative;
-        width: $fullsize * $count + $block;
+        width: $fullsize * $count + 1px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         -webkit-transform: translateZ(0);-moz-transform: translateZ(0);-ms-transform: translateZ(0);-o-transform: translateZ(0);transform: translateZ(0);
         -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
