--- a/scss/adhoc/_all.scss
+++ b/scss/adhoc/_all.scss
@@ -1,11 +1,14 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* ADHOC */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-$fullwidth: 980px;
-$lillwidth: 480px;
-$unit: $fullwidth / 97;
-$wt: $unit * 15;
-$ht: $unit * 15;
+$fullsize: 980px;
+
+.dev *:hover {
+    outline-color: rgba(255,0,0,0.5);
+    outline-offset: -1px;
+    outline-style: solid;
+    outline-width: 1px;
+}
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_base";
