--- a/scss/adhoc/_base.scss
+++ b/scss/adhoc/_base.scss
@@ -1,81 +1,73 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* ADHOC / Base */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
 .iS-port {
+    $count: 3;
+    $height: $fullsize / 3.8;
+    $block: $fullsize / 49;
+    $gauge: ($count * 2 - 1) * $block;
+
     background-color: #333;
+    box-shadow: 1px 1px 33px gray;
+    margin: auto;
     overflow: hidden;
     position: relative;
+    text-align: center;
+    width: $fullsize;
 
     .iS-view {
-        min-height: 111px;
-        min-width: 999px;
+        height: $height + $block;
         position: relative;
-        z-index: 1;
+        width: $fullsize * $count + 1px;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         -webkit-transform: translateZ(0);-moz-transform: translateZ(0);-ms-transform: translateZ(0);-o-transform: translateZ(0);transform: translateZ(0);
         -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
         -webkit-text-size-adjust: none;-moz-text-size-adjust: none;-ms-text-size-adjust: none;-o-text-size-adjust: none;text-size-adjust: none;
+
+        & > * {
+            background-color: #eee;
+            background-size: 100% 100%;
+            cursor: -webkit-grab;
+            float: left;
+            height: $height;
+            margin: $block / 2;
+            width: $fullsize - $block;
+            position: relative;
+            z-index: 1;
+        }
     }
     .iS-proxy {
         cursor: pointer;
-        min-height: 11px;
-        min-width: 33px;
+        height: $block;
+        left: $fullsize / 2 - $gauge / 2; // center
         position: absolute;
-        top: 0;
-        z-index: 9;
-    }
-    .iS-peg {
-        background-color: #ddd;
-        min-height: 11px;
-        min-width: 11px;
-        position: absolute;
+        top: $height - $block * 1.5; // x height + x/2 for margin
+        width: $gauge;
         z-index: 1;
-    }
-    .slides {
-        background-color: #eee;
-        background-size: 100% 100%;
-        cursor: -webkit-grab;
-        float: left;
-        min-height: 111px;
-        min-width: 333px;
-        position: relative;
-        z-index: 1;
+
+        .iS-peg {
+            background-color: #ddd;
+            height: $block * 0.9;
+            opacity: 0.9;
+            width: $block;
+        }
     }
 }
 
-.iS-port._spending {
-    $indi: 20px; // indicator
-    $revW: $fullwidth;
-    $revH: 257px; // reveal H and W
-    $revWm: $lillwidth;
-    $revHm: 257px; // reveal H and W
-
-    width: $revW;
-
-    &, * {
-        border: 0;
-    }
-    .iS-view {
-        width: $revW * 3 + 1px;
-        height: $revH * 1 + $indi;
-    }
+._spending {
     .iS-proxy {
         background-image: url(../images/controls/cubes.png);
-        height: $indi;
-        right: 40%;
-        top: 230px;
-        width: (3 * $indi * 2) - $indi;
-    }
-    .iS-peg {
-        height: $indi - 1;
-        opacity: 0.9;
-        width: $indi;
     }
     .slides {
-        height: $revH;
         background-image: url(../images/features/_bkgr.png);
-        margin: $unit $unit 0;
-        width: $revW - $indi;
+
+        &:first-child::after {
+            content: "first";
+        }
+        &:last-child::before {
+            content: 'last';
+        }
     }
 }
 
