refer to rotator sass as roto

--- a/scss/roto/_all.scss
+++ b/scss/roto/_all.scss
@@ -1,5 +1,5 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* ADHOC */
+/* ROTO */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 $fullsize: 980px;
 
