--- a/scss/roto/_base.scss
+++ b/scss/roto/_base.scss
@@ -1,5 +1,5 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* ADHOC / Base */
+/* ROTO / Base */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 .iS-port {
