--- a/scss/roto/_base.scss
+++ b/scss/roto/_base.scss
@@ -50,6 +50,7 @@
             background-color: #ddd;
             height: $block * 0.9;
             opacity: 0.9;
+            position: relative;
             width: $block;
         }
     }
