--- a/scss/roto/_base.scss
+++ b/scss/roto/_base.scss
@@ -3,9 +3,11 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 .iS-port {
+    $fullsize: 980px;
     $count: 3;
-    $height: $fullsize / 3.8;
+    $height: $fullsize / 2;
     $block: $fullsize / 49;
+    $margin: $block / 2;
     $gauge: ($count * 2 - 1) * $block;
 
     background-color: #333;
@@ -17,9 +19,9 @@
     width: $fullsize;
 
     .iS-view {
-        height: $height + $block;
+        height: $height + $margin * 2;
         position: relative;
-        width: $fullsize * $count + 1px;
+        width: $fullsize * $count;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         -webkit-transform: translateZ(0);-moz-transform: translateZ(0);-ms-transform: translateZ(0);-o-transform: translateZ(0);transform: translateZ(0);
         -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
@@ -57,18 +59,21 @@
 }
 
 ._projector {
+    .iS-view {
+        & > * {
+            background-image: url(../images/metal.png);
+
+            &:first-child::after {
+                content: "first";
+            }
+            &:last-child::before {
+                content: 'last';
+            }
+        }
+    }
     .iS-proxy {
         background-image: url(../images/cubes.png);
-    }
-    .iS-view > * {
-        background-image: url(../images/metal.png);
-
-        &:first-child::after {
-            content: "first";
-        }
-        &:last-child::before {
-            content: 'last';
-        }
+        background-size: contain;
     }
 }
 
