--- a/scss/roto/_custom.scss
+++ b/scss/roto/_custom.scss
@@ -11,10 +11,10 @@
     & > * {
         background-image: url(../images/metal.png);
 
-        &:first-child::after {
+        &:first-child:after {
             content: "first";
         }
-        &:last-child::before {
+        &:last-child:before {
             content: 'last';
         }
     }
@@ -23,7 +23,6 @@
         @include transform( translate(0.5%, 0) scaleX(1.01) translateZ(0px) );
         @include transition( 0.5s cubic() );
         background-image: url(../images/metal.png);
-        top: $show_xtra / -2; /* half the dif */
     }
     .scrolling & {
         img {
@@ -67,6 +66,17 @@
             background-color: green;
         }
     }
-
+}
+.c1 {
+    border-top: 1em solid red !important;
+}
+.c2 {
+    border-top: 1em solid green !important;
+}
+.c3 {
+    border-top: 1em solid yellow !important;
+}
+.c4 {
+    border-top: 1em solid blue !important;
 }
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
