--- a/scss/roto/_all.scss
+++ b/scss/roto/_all.scss
@@ -1,15 +1,26 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* ADHOC */
+/* ROTO */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-$fullsize: 980px;
+$count: 4;
+$fullsize: 100%;
+$show_tall: 25rem;
+$peg: 18px;
+$gap: $peg;
 
-.dev *:hover {
-    outline-color: rgba(255,0,0,0.5);
-    outline-offset: -1px;
-    outline-style: solid;
-    outline-width: 1px;
+$dark: #333;
+$lite: #ddd;
+$live: #c00;
+
+@include keyframes(throb) {
+    33% { opacity: 1.0; }
+    44% { opacity: 0.7; }
+    55% { opacity: 0.8; }
+    66% { opacity: 0.6; }
+    77% { opacity: 1.0; }
 }
+
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_base";
+@import "_custom";
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
