--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -5,6 +5,14 @@
 @import "compass/css3/user-interface";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "core/_all";
-@import "adhoc/_all";
+@import "roto/_all";
+
+.dev *:hover {
+    outline-color: rgba(255,0,0,0.5);
+    outline-offset: -1px;
+    outline-style: solid;
+    outline-width: 1px;
+}
+
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* >^º!º^< */
