--- a/scss/roto/_base.scss
+++ b/scss/roto/_base.scss
@@ -1,25 +1,22 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* ADHOC / Base */
+/* ROTO / Base */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 .iS-port {
-    $count: 3;
-    $height: $fullsize / 3.8;
-    $block: $fullsize / 49;
-    $gauge: ($count * 2 - 1) * $block;
+    $width: $fullsize / $count;
 
-    background-color: #333;
-    box-shadow: 1px 1px 33px gray;
     margin: auto;
     overflow: hidden;
     position: relative;
     text-align: center;
-    width: $fullsize;
 
+    .loading & {
+        visibility: hidden;
+    }
     .iS-view {
-        height: $height + $block;
+        height: 100%;
         position: relative;
-        width: $fullsize * $count + 1px;
+        width: $fullsize * $count;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         -webkit-transform: translateZ(0);-moz-transform: translateZ(0);-ms-transform: translateZ(0);-o-transform: translateZ(0);transform: translateZ(0);
         -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
@@ -30,44 +27,20 @@
             background-size: 100% 100%;
             cursor: -webkit-grab;
             float: left;
-            height: $height;
-            margin: $block / 2;
-            width: $fullsize - $block;
             position: relative;
-            z-index: 1;
+            width: $width;
         }
     }
     .iS-proxy {
         cursor: pointer;
-        height: $block;
-        left: $fullsize / 2 - $gauge / 2; // center
+        height: $peg;
         position: absolute;
-        top: $height - $block * 1.5; // x height + x/2 for margin
-        width: $gauge;
-        z-index: 1;
-
-        .iS-peg {
-            background-color: #ddd;
-            height: $block * 0.9;
-            opacity: 0.9;
-            width: $block;
-        }
+        width: $count * ($peg + $gap);
     }
-}
-
-._spending {
-    .iS-proxy {
-        background-image: url(../images/controls/cubes.png);
-    }
-    .slides {
-        background-image: url(../images/features/_bkgr.png);
-
-        &:first-child::after {
-            content: "first";
-        }
-        &:last-child::before {
-            content: 'last';
-        }
+    .iS-peg {
+        background-color: $live;
+        height: $peg;
+        position: relative;
     }
 }
 
