--- a/scss/core/_all.scss
+++ b/scss/core/_all.scss
@@ -2,9 +2,9 @@
 /* CORE */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_def";
-/*@import "_fun";*/
-/*@import "_mix";*/
-/*@import "_set";*/
+@import "_fun";
+@import "_mix";
+@import "_set";
 
 // TRANSLATE
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
