--- a/scss/roto/_all.scss
+++ b/scss/roto/_all.scss
@@ -2,23 +2,8 @@
 /* ROTO */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 $count: 4;
-$fullsize: 100%;
-$show_tall: 25rem;
-$peg: 18px;
-$gap: $peg;
-
-$dark: #333;
-$lite: #ddd;
-$live: #c00;
-
-@include keyframes(throb) {
-    33% { opacity: 1.0; }
-    44% { opacity: 0.7; }
-    55% { opacity: 0.8; }
-    66% { opacity: 0.6; }
-    77% { opacity: 1.0; }
-}
-
+$peg: 17.4px;
+$gap: $peg * 1.1;
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 @import "_base";
