--- a/scss/roto/_base.scss
+++ b/scss/roto/_base.scss
@@ -2,9 +2,10 @@
 /* ROTO / Base */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-.iS-port {
-    $width: $fullsize / $count;
+$count: 5 !default;
+$peg: 1rem !default;
 
+.iS-port {
     margin: auto;
     overflow: hidden;
     position: relative;
@@ -14,13 +15,14 @@
         visibility: hidden;
     }
     .iS-view {
+        @include text-size-adjust( none );
+        @include transition( 0.5s cubic() );
+        @include user-select( none );
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-touch-callout: none;
         height: 100%;
         position: relative;
-        width: $fullsize * $count;
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
-        -webkit-transform: translateZ(0);-moz-transform: translateZ(0);-ms-transform: translateZ(0);-o-transform: translateZ(0);transform: translateZ(0);
-        -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
-        -webkit-text-size-adjust: none;-moz-text-size-adjust: none;-ms-text-size-adjust: none;-o-text-size-adjust: none;text-size-adjust: none;
+        width: 100% * $count;
 
         & > * {
             background-color: #eee;
@@ -28,19 +30,26 @@
             cursor: -webkit-grab;
             float: left;
             position: relative;
-            width: $width;
+            width: 100% / $count;
         }
     }
     .iS-proxy {
+        background-color: rgba(255, 255, 255, 0.5);
+        bottom: $peg;
+        box-sizing: content-box;
         cursor: pointer;
         height: $peg;
+        left: $peg;
         position: absolute;
-        width: $count * ($peg + $gap);
+        width: $peg * 2 * $count;
+        z-index: 9;
     }
     .iS-peg {
-        background-color: $live;
+        background-color: rgba(255, 255, 255, 0.5);
         height: $peg;
-        position: relative;
+        left: 0;
+        position: absolute;
+        width: $peg;
     }
 }
 
