--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -5,3 +5,75 @@ body {/* test */
 /*     border: 1em solid lime;*/
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+.starfield {
+    -ms-touch-action: none;
+    * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    body,ul,li {
+        border: 0;
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        font-family: ubuntu, helvetica, arial;
+        font-size: 12px;
+        overflow: hidden; /* this is important to prevent the whole page to bounce */
+        background: #000;
+    }
+    #wrapper {
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 3;
+    }
+    #scroller {
+        @include text-size-adjust( none );
+        @include transform( translateZ(0) );
+        @include user-select( none );
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -webkit-touch-callout: none;
+
+        background: url(../images/galaxies1.png);
+        height: 4000px;
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        z-index: 3;
+    }
+    .starfield {
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+    .starfield div {
+        position: absolute;
+        overflow: hidden;
+        @include transform( translateZ(0) );
+        width: 100%;
+    }
+    #starfield1 {
+        z-index: 2;
+    }
+    #stars1 {
+        background: url(../images/galaxies2.png);
+        height: 3000px;
+        z-index: 2;
+    }
+    #starfield2 {
+        z-index: 1;
+    }
+    #stars2 {
+        z-index: 1;
+        height: 2000px;
+        background: url(../images/stars.jpg);
+    }
+}
