--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -11,31 +11,14 @@ body {/* test */
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-    }
-    body,ul,li {
         border: 0;
         margin: 0;
         padding: 0;
     }
     body {
-        font-family: ubuntu, helvetica, arial;
-        font-size: 12px;
+        color: white;
         overflow: hidden; /* this is important to prevent the whole page to bounce */
-        background: #000;
-    }
-    .field0 {
-        z-index: 3;
-    }
-    #scroller {
-        @include text-size-adjust( none );
-        @include transform( translateZ(0) );
-        @include user-select( none );
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
-        -webkit-touch-callout: none;
-
-        background: url('../images/galaxies1.png');
-        height: 4000px;
-        z-index: 3;
+        background: #123;
     }
     .stars {
         bottom: 0;
@@ -44,28 +27,45 @@ body {/* test */
         position: absolute;
         top: 0;
         width: 100%;
+
+        div {
+            overflow: hidden;
+            padding: 1rem;
+            position: absolute;
+            width: 100%;
+            @include transform( translateZ(0) );
+        }
     }
-    .stars div {
-        position: absolute;
-        overflow: hidden;
-        @include transform( translateZ(0) );
-        width: 100%;
+    .field0 {
+        z-index: 3;
+
+        div {
+            background: url('../images/galaxies1.png');
+            height: 4000px;
+            z-index: 3;
+            @include text-size-adjust( none );
+            @include user-select( none );
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-touch-callout: none;
+        }
     }
     .field1 {
         z-index: 2;
-    }
-    #stars1 {
-        background: url('../images/galaxies2.png');
-        height: 3000px;
-        z-index: 2;
+
+        div { // inner
+            background: url('../images/galaxies2.png');
+            height: 3000px;
+            z-index: 2;
+        }
     }
     .field2 {
         z-index: 1;
-    }
-    #stars2 {
-        background: url('../images/stars.png');
-        height: 2000px;
-        z-index: 1;
+
+        div { // inner
+            background: url('../images/stars.png');
+            height: 2000px;
+            z-index: 1;
+        }
     }
 }
 
