set a touch div

--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -43,10 +43,6 @@ body {/* test */
             background: url('../images/galaxies1.png');
             height: 4000px;
             z-index: 3;
-            @include text-size-adjust( none );
-            @include user-select( none );
-            -webkit-tap-highlight-color: rgba(0,0,0,0);
-            -webkit-touch-callout: none;
         }
     }
     .field1 {
@@ -66,6 +62,12 @@ body {/* test */
             height: 2000px;
             z-index: 1;
         }
+    }
+    .touch {
+        @include text-size-adjust( none );
+        @include user-select( none );
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -webkit-touch-callout: none;
     }
 }
 
