--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -6,11 +6,15 @@ body {/* test */
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .starfield {
+    $R0: 3/3;
+    $R1: 2/3;
+    $R2: 1/3;
+    $MIN: 200%;
+    $MAX: 1000%;
+
     -ms-touch-action: none;
     * {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
+        @include box-sizing( border-box );
         border: 0;
         margin: 0;
         padding: 0;
@@ -25,6 +29,7 @@ body {/* test */
         left: 0;
         overflow: hidden;
         position: absolute;
+        right: 0;
         top: 0;
         width: 100%;
 
@@ -34,12 +39,13 @@ body {/* test */
             @include transform( translateZ(0) );
         }
     }
+
     .field0 {
         z-index: 3;
 
         div {
             background: url('../images/galaxies1.png');
-            height: 400%;
+            height: $MIN + ($MAX * $R0);
         }
     }
     .field1 {
@@ -47,7 +53,7 @@ body {/* test */
 
         div { // inner
             background: url('../images/galaxies2.png');
-            height: 300%;
+            height: $MIN + ($MAX * $R1);
         }
     }
     .field2 {
@@ -55,7 +61,7 @@ body {/* test */
 
         div { // inner
             background: url('../images/stars.png');
-            height: 200%;
+            height: $MIN + ($MAX * $R2);
         }
     }
     .touch {
@@ -65,40 +71,42 @@ body {/* test */
         -webkit-touch-callout: none;
     }
 }
-.marker {
-    height: 0%;
-    position: absolute;
-    width: 10%;
+.starfield.test {
+    .marker {
+        height: 0%;
+        position: absolute;
+        width: 10%;
 
-    p {
-        border: 1px solid white;
-        text-align: center;
+        p {
+            border: 1px solid white;
+            text-align: center;
+        }
     }
-}
-.tl { top:    10%; left:  10%; }
-.tr { top:    10%; right: 10%; }
-.br { bottom: 10%; right: 10%; }
-.bl { bottom: 10%; left:  10%; }
-.md { left:   45%; top:   50%; }
+    .tl { top:    10%; left:  10%; }
+    .tr { top:    10%; right: 10%; }
+    .br { bottom: 10%; right: 10%; }
+    .bl { bottom: 10%; left:  10%; }
+    .md { left:   45%; top:   50%; }
 
-$C1: red;
-$C2: lime;
-$C3 : blue;
-#tmp0 {
-    border: 3px dotted $C1;
-    div {
-        border: 3px solid $C1; color: $C1;
+    $C1: #d00;
+    $C2: #0c0;
+    $C3: #25f;
+    #tmp0 {
+        border: 1px solid $C1;
+        div {
+            border: 2px dotted $C1; color: $C1;
+        }
     }
-}
-#tmp1 {
-    border: 5px dotted $C2;
-    div {
-        border: 5px solid $C2; color: $C2;
+    #tmp1 {
+        border: 2px solid $C2;
+        div {
+            border: 3px dotted $C2; color: $C2;
+        }
     }
-}
-#tmp2 {
-    border: 7px dotted $C3;
-    div {
-        border: 7px solid $C3; color: $C3;
+    #tmp2 {
+        border: 4px solid $C3;
+        div {
+            border: 4px dotted $C3; color: $C3;
+        }
     }
 }
