--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -7,10 +7,10 @@ body {/* test */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .starfield {
     $R0: 3/3;
-    $R1: 2/3;
-    $R2: 1/3;
-    $MIN: 200%;
-    $MAX: 1000%;
+    $R1: 2/4;
+    $R2: 1/4;
+    $MIN: 100%;
+    $MAX: 500%;
 
     -ms-touch-action: none;
     * {
@@ -31,11 +31,9 @@ body {/* test */
         position: absolute;
         right: 0;
         top: 0;
-        width: 100%;
 
         div {
             position: absolute;
-            width: 100%;
             @include transform( translateZ(0) );
         }
     }
@@ -46,6 +44,7 @@ body {/* test */
         div {
             background: url('../images/galaxies1.png');
             height: $MIN + ($MAX * $R0);
+            width:  $MIN + ($MAX * $R0);
         }
     }
     .field1 {
@@ -54,6 +53,7 @@ body {/* test */
         div { // inner
             background: url('../images/galaxies2.png');
             height: $MIN + ($MAX * $R1);
+            width:  $MIN + ($MAX * $R1);
         }
     }
     .field2 {
@@ -62,6 +62,7 @@ body {/* test */
         div { // inner
             background: url('../images/stars.png');
             height: $MIN + ($MAX * $R2);
+            width:  $MIN + ($MAX * $R2);
         }
     }
     .touch {
@@ -72,13 +73,21 @@ body {/* test */
     }
 }
 .starfield.test {
+    $C1: #d00;
+    $C2: #0c0;
+    $C3: #25f;
+
     .marker {
         height: 0%;
         position: absolute;
         width: 10%;
 
         p {
-            border: 1px solid white;
+            background-color: rgba(5,5,5, 0.2);
+            border: 1em solid rgba(255,255,255, 0.1);
+            border-radius: 15em / 5em;
+            border-width: 0.5em 2em;
+            padding: 0.5em;
             text-align: center;
         }
     }
@@ -88,23 +97,23 @@ body {/* test */
     .bl { bottom: 10%; left:  10%; }
     .md { left:   45%; top:   50%; }
 
-    $C1: #d00;
-    $C2: #0c0;
-    $C3: #25f;
     #tmp0 {
         border: 1px solid $C1;
+        font-size: 400%;
         div {
             border: 2px dotted $C1; color: $C1;
         }
     }
     #tmp1 {
         border: 2px solid $C2;
+        font-size: 200%;
         div {
             border: 3px dotted $C2; color: $C2;
         }
     }
     #tmp2 {
         border: 4px solid $C3;
+        font-size: 100%;
         div {
             border: 4px dotted $C3; color: $C3;
         }
