--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -6,6 +6,7 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 @import "core/_all";
 @import "proj/_all";
+@import "stars/_all";
 
 .dev *:hover {
     outline-color: rgba(255,155,055,0.5);
