--- a/scss/proj/_all.scss
+++ b/scss/proj/_all.scss
@@ -1,6 +1,9 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* PROJ */
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
+$count: 4;
+$peg: 17.4px;
+$gap: $peg * 1.1;
 @mixin shadgrad($clr1: rgba(11, 11, 11, 0.5), $clr2: rgba(0, 0, 0, 0) ){
     @include background-image( linear-gradient(top, $clr1 70%, $clr2 90%) );
 }
