--- a/scss/proj/_custom.scss
+++ b/scss/proj/_custom.scss
@@ -1,40 +1,106 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* PROJ / Custom */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$dark: #333;
+$lite: #ddd;
+$live: #c00;
 
-#Pics {
+.iS-port {
+    $count: 5 !default;
+    $peg: 1rem !default;
+
+    @include transition( 0.5s cubic() );
+    background-color: $lite;
+    height: 20 * $peg;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
     text-align: center;
-}
 
-#Text {
-    height: 90%;
-    overflow: auto;
-    position: fixed;
-    top: 10%;
-    width: 101%;
-    -webkit-mask: -webkit-linear-gradient(transparent, black 20%, black 80%, transparent) top left / contain;
-
-    div div {
-        @include shadgrad();
-        clear: both;
-        float: left;
-        margin: 11em 10%;
-        padding: 0.25em 1.5em 5em;
+    .loading & {
+        visibility: hidden;
+    }
+    .iS-view {
+        @include text-size-adjust( none );
+        @include transition( 0.5s cubic() );
+        @include user-select( none );
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-touch-callout: none;
+        height: 100%;
         position: relative;
+        width: 100% * $count;
 
-        aside {
-            left: 120%;
-            position: absolute;
-            top: 20%;
+        & > * {
+            background-color: #eee;
+            background-size: 100% 100%;
+            cursor: -webkit-grab;
+            float: left;
+            position: relative;
+            width: 100% / $count;
         }
     }
-    p {
-        font-size: 80%;
+    .iS-proxy {
+        background-color: rgba(255, 255, 255, 0.5);
+        bottom: $peg;
+        box-sizing: content-box;
+        cursor: pointer;
+        height: $peg;
+        left: $peg;
+        position: absolute;
+        width: $peg * 2 * $count;
+        z-index: 9;
     }
-}
-.down {
-    position: fixed;
-    left: 50%;
-    bottom: 5%;
+    .iS-peg {
+        background-color: rgba(255, 255, 255, 0.5);
+        height: $peg;
+        left: 0;
+        position: absolute;
+        width: $peg;
+    }
+
+    .iS-view {
+        img {
+            @include filter( blur(0px) );
+            background-image: url(../images/metal.png);
+
+            &:first-child:after {
+                content: "first";
+            }
+            &:last-child:before {
+                content: 'last';
+            }
+            .scrolling & {
+                @include filter( blur(2px) );
+                @include transform( translate(-0.5%, 0) scaleX(1.01) translateZ(0px) );
+                opacity: 0.9;
+            }
+        }
+    }
+    .iS-proxy {
+        background-image: url(../images/cubes.png);
+        background-repeat: repeat-x;
+        border: $peg / 2 solid rgba(255, 255, 255, 0);
+        left: 2 * $peg;
+    }
+    .iS-peg {
+        background-color: $lite;
+        border-radius: 2px;
+
+        &:hover {
+            background-color: $live;
+        }
+        .paused & {
+            @include animation( throb 3s ease-in-out infinite );
+            background-color: $live;
+
+            &:hover {
+                background-color: green;
+            }
+        }
+    }
+    .c1 { border-top: 1em solid red !important; }
+    .c2 { border-top: 1em solid green !important; }
+    .c3 { border-top: 1em solid yellow !important; }
+    .c4 { border-top: 1em solid blue !important; }
 }
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
