--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -8,7 +8,7 @@
 @import "proj/_all";
 @import "stars/_all";
 
-.dev *:hover {
+.debug *:hover {
     outline-color: rgba(255,155,055,0.5);
     outline-offset: 0.5px;
     outline-style: solid;
