spruce up slots for ie8

--- a/scss/slots/_slot.scss
+++ b/scss/slots/_slot.scss
@@ -58,7 +58,7 @@ $full: '.slot05, .slot69                                              ' ;
 .slot88 .slot88,
 .slot89 .slot88,.slot89 .slot89 {
     clear: left;
-    margin-left: 0;
+    margin-left: 0 !important;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .slots {
