backfill from snoman

--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -5,3 +5,52 @@ body {/* test */
 /*     border: 1em solid lime;*/
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+/*  OUR LIL FRIEND
+
+    draganddrop
+    fontface
+    generatedcontent
+    hashchange
+    js
+    localstorage
+    lt-ie8
+    lt-ie9
+    no-applicationcache
+    no-audio
+    no-backgroundsize
+    no-borderimage
+    no-borderradius
+    no-boxshadow
+    no-canvas
+    no-canvastext
+    no-cssanimations
+    no-csscolumns
+    no-cssgradients
+    no-cssreflections
+    no-csstransforms
+    no-csstransforms3d
+    no-csstransitions
+    no-flexbox
+    no-flexboxlegacy
+    no-geolocation
+    no-history
+    no-hsla
+    no-indexeddb
+    no-inlinesvg
+    no-multiplebgs
+    no-opacity
+    no-rgba
+    no-smil
+    no-svg
+    no-svgclippaths
+    no-textshadow
+    no-touch
+    no-video
+    no-webgl
+    no-websockets
+    no-websqldatabase
+    no-webworkers
+    postmessage
+    sessionstorage
+
+*/
