--- a/scss/core/_set.scss
+++ b/scss/core/_set.scss
@@ -1,5 +1,5 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* reset */
+/* CORE / reset */
 
 a, abbr, acronym, address, applet, article, aside, audio,
 b, big, blockquote, body, canvas, caption, center, cite, code,
