--- a/scss/core/_fun.scss
+++ b/scss/core/_fun.scss
@@ -1,5 +1,5 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-/* functions */
+/* CORE / functions */
 
 @function gM($num: 1){
     @return $rem * $num;
