--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,5 +1,4 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-@import "animation";
 @import "compass/css3";
 @import "compass/css3/transition";
 @import "compass/css3/user-interface";
@@ -30,4 +29,4 @@
     }
 }
 @import "_misc";
-/* >^º!º^< */
+/* >^!^< */
