--- a/scss/slots.scss
+++ b/scss/slots.scss
@@ -1,5 +1,4 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-@import "animation";
 @import "compass/css3";
 @import "compass/css3/transition";
 @import "compass/css3/user-interface";
@@ -27,4 +26,4 @@
         display: none;
     }
 }
-/* >^º!º^< */
+/* >^!^< */
