--- a/scss/core/_all.scss
+++ b/scss/core/_all.scss
@@ -1,6 +1,7 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
 /* CORE */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+@import "compass/css3";
 @import "_def";
 @import "_fun";
 @import "_mix";
