--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-@import "slots/_all";
+@import "core/_all";
+@import "proj/_all";
+@import "stars/_all";
 @import "_misc";
 /* >^!^< */
