--- a/scss/stars.scss
+++ b/scss/stars.scss
@@ -1,4 +1,5 @@
 // - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - - + - //
-@import "slots/_all";
+@import "core/_all";
+@import "stars/_all";
 @import "_misc";
 /* >^!^< */
